# compress-image

./: .gitignore  CMakeLists.txt  LICENSE  OpenCV_learn.cpp  README.md
assets/: readme.md
